--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: rgba(255, 255, 255, 0.7); /* Ajustado para transparência */
             display: flex;
             align-items: center;
             justify-content: center;
