--- a/index.html
+++ b/index.html
@@ -75,13 +75,6 @@
         .btn-whatsapp:hover {
             background-color: #1ebe5b;
         }
-        .footer-links {
-            margin-top: 20px;
-        }
-        .footer-links a {
-            margin: 0 10px;
-            color: #0066cc;
-        }
         .img-container img {
             width: 100%;
             max-width: 400px;
@@ -188,6 +181,12 @@
             padding: 1rem 0;
             text-align: center;
         }
+        .contact-info {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: #0066cc;
+        }
         @media (max-width: 768px) {
             .card {
                 width: 90%;
@@ -223,11 +222,8 @@
                         </div>
                     </form>
                 </div>
-                <div class="content-links footer-content-links">
-                    <a href="#">Fotografia</a>
-                    <a href="#">Conteúdo +18</a>
-                    <a href="#">Curadoria Musical</a>
-                    <a href="#">AudioVisual</a>
+                <div class="contact-info">
+                    contato@moschiat.com
                 </div>
             </div>
         </div>
