--- a/index.html
+++ b/index.html
@@ -13,17 +13,40 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             font-family: Arial, sans-serif;
         }
         .container {
             text-align: center;
+            animation: fadeIn 3s ease-in-out;
         }
         h1 {
             font-size: 4rem;
             margin-bottom: 1rem;
+            animation: glow 2s ease-in-out infinite alternate;
         }
         p {
             font-size: 2rem;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes glow {
+            from {
+                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff;
+            }
+            to {
+                text-shadow: 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff, 0 0 80px #ff00ff;
+            }
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2.5rem;
+            }
+            p {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
