--- a/index.html
+++ b/index.html
@@ -18,27 +18,36 @@
         }
         .container {
             text-align: center;
-            animation: fadeIn 3s ease-in-out;
         }
         h1 {
             font-size: 4rem;
             margin-bottom: 1rem;
-            animation: glow 2s ease-in-out infinite alternate;
+            color: #ffffff;
+            position: relative;
+            display: inline-block;
+            letter-spacing: 10px;
+            transform: perspective(500px) rotateX(20deg) rotateY(-30deg);
+            transform-style: preserve-3d;
+            transition: transform 0.5s;
+        }
+        h1::before, h1::after {
+            content: 'Paulo Marques';
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        h1::before {
+            color: #ff0000;
+            z-index: -2;
+            transform: translate3d(10px, 10px, -30px);
+        }
+        h1::after {
+            color: #00ff00;
+            z-index: -1;
+            transform: translate3d(5px, 5px, -15px);
         }
         p {
             font-size: 2rem;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        @keyframes glow {
-            from {
-                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff;
-            }
-            to {
-                text-shadow: 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff, 0 0 80px #ff00ff;
-            }
         }
         @media (max-width: 768px) {
             h1 {
