--- a/index.html
+++ b/index.html
@@ -46,15 +46,10 @@
         <h1>MOSCHIAT</h1>
     </div>
     <div id="poem" class="content hidden">
-        <h2>Poema:</h2>
-        <p>Em sombras onde a luz se perde,<br>
-        Entre o que é e o que poderia ser,<br>
-        Nascem sonhos, fracos e incertos,<br>
-        Em chamas que nunca chegam a aquecer.<br>
-        O destino sussurra em lamentos,<br>
-        E a vida dança em círculos quebrados,<br>
-        Enquanto o tempo esconde seus tormentos,<br>
-        No eco de passos não dados.</p>
+        <p>Nos campos de luz e cor,<br>
+        A vida dança, brilha e canta,<br>
+        Cada dia um novo amor,<br>
+        A esperança é a nossa manta.</p>
     </div>
     <script>
         setTimeout(() => {
