--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paulo Marques / MOSCHIAT</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: black;
-            color: white;
+            background-color: #f8f9fa; /* Cor de fundo suave */
+            color: #212529;
             text-align: center;
             overflow: hidden;
         }
+
         .hidden {
             display: none;
         }
+
         .content {
             position: absolute;
             top: 50%;
@@ -24,33 +27,62 @@
             transform: translate(-50%, -50%);
             transition: opacity 1s;
         }
+
         .fade-in {
             opacity: 0;
             animation: fadeIn 3s forwards;
         }
+
         @keyframes fadeIn {
             to {
                 opacity: 1;
             }
         }
+
+        h1 {
+            font-size: 3rem;
+            color: #212529;
+        }
+
+        .lead {
+            font-size: 1.25rem;
+            color: #495057;
+        }
+
+        .text-muted {
+            font-size: 1rem;
+            color: #6c757d;
+        }
+
+        .btn-dark {
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 5px;
+        }
+
         .poem {
             display: none;
+            font-size: 1.25rem;
+            color: #495057;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+
     <div id="name" class="content">
-        <h1>Paulo Marques</h1>
+        <h1 class="fw-bold">Paulo Marques</h1>
     </div>
     <div id="moschiat" class="content hidden">
         <h1>MOSCHIAT</h1>
     </div>
-    <div id="poem" class="content hidden">
+    <div id="poem" class="poem hidden fade-in">
         <p>Nos campos de luz e cor,<br>
         A vida dança, brilha e canta,<br>
         Cada dia um novo amor,<br>
         A esperança é a nossa manta.</p>
     </div>
+
     <script>
         setTimeout(() => {
             document.getElementById('name').classList.add('hidden');
@@ -63,5 +95,6 @@
             document.getElementById('poem').classList.add('fade-in');
         }, 6000);
     </script>
+
 </body>
 </html>
